[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "session-baton"
version = "0.1.0"
description = "Structured cross-session state handoff for AI coding agents. Loop Engineering implementation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Makito Chiba", email = "makiakatsu@gmail.com" },
]
keywords = ["ai", "agent", "loop-engineering", "session", "state", "handoff", "aca"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
]

[project.urls]
Homepage = "https://github.com/MakiDevelop/session-baton"
Documentation = "https://chiba.tw/loop-engineering/"
Repository = "https://github.com/MakiDevelop/session-baton"
Issues = "https://github.com/MakiDevelop/session-baton/issues"

[project.scripts]
session-baton = "session_baton.server:app"

[tool.hatch.build.targets.wheel]
packages = ["session_baton"]

[tool.ruff]
target-version = "py311"
line-length = 100
